# requests-sse

./: .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test-deploy.yml
requests_sse/: __init__.py  client.py
tests/: test_client.py  test_connect_loop.py  test_parsing.py  test_reconnect_backoff.py  test_state.py  test_timeout.py
tests/web_platform_tests/: const.py  test_event_data.py  test_eventsource_close.py  test_eventsource_onmessage.py  test_eventsource_onopen.py  test_eventsource_reconnect.py  test_eventsource_request_cancellation.py  test_format_field_id.py  test_request.py
